// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--dry-run > should list for dependent tasks 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.depends-on.ts build --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.depends-on.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>node</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>install</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>test</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compileSvg</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compileTs</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compile</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>build</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`--dry-run > should list for one task 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer hello --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;
